[package]
name = "rustbolt-common"
version = "0.1.0"
authors = ["Murt <murt@unpossible.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustbolt-protocol = { path = "../rustbolt-protocol" }
uuid = { version = "0.8.1", features = ["v4"] }
